--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cyberadvance-ng4",
   "version": "1.0.0",
   "license": "MIT",
+  "main": "app.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
